@@ -264,7 +264,7 @@ Ext.extend(MODx.grid.Grid,Ext.grid.EditorGridPanel,{
                     field: this.config.sortBy || 'id'
                     ,direction: this.config.sortDir || 'ASC'
                 }
-                ,remoteSort: this.config.remoteSort != false ? true : false
+                ,remoteSort: this.config.remoteSort || false
                 ,groupField: this.config.groupBy || 'name'
                 ,storeId: this.config.storeId || Ext.id()
                 ,autoDestroy: true
@@ -306,13 +306,14 @@ Ext.extend(MODx.grid.Grid,Ext.grid.EditorGridPanel,{
                 }
                 if (typeof(c[i].editor) == 'object' && c[i].editor.xtype) {
                     var r = c[i].editor.renderer;
+                    if (Ext.isEmpty(c[i].editor.id)) { c[i].editor.id = Ext.id(); }
                     c[i].editor = Ext.ComponentMgr.create(c[i].editor);
                     if (r === true) {
                         if (c[i].editor && c[i].editor.store && !c[i].editor.store.isLoaded && c[i].editor.config.mode != 'local') {
                             c[i].editor.store.load();
                             c[i].editor.store.isLoaded = true;
                         }
-                        c[i].renderer = MODx.combo.Renderer(c[i].editor);
+                        c[i].renderer = Ext.util.Format.comboRenderer(c[i].editor);
                     } else if (c[i].editor.initialConfig.xtype === 'datefield') {
                         c[i].renderer = Ext.util.Format.dateRenderer(c[i].editor.initialConfig.format || 'Y-m-d');
                     } else if (r === 'boolean') {
@@ -586,7 +587,7 @@ Ext.extend(MODx.grid.LocalGrid,Ext.grid.EditorGridPanel,{
                             c[i].editor.store.load();
                             c[i].editor.store.isLoaded = true;
                         }
-                        c[i].renderer = MODx.combo.Renderer(c[i].editor);
+                        c[i].renderer = Ext.util.Format.comboRenderer(c[i].editor);
                     } else if (c[i].editor.initialConfig.xtype === 'datefield') {
                         c[i].renderer = Ext.util.Format.dateRenderer(c[i].editor.initialConfig.format || 'Y-m-d');
                     } else if (r === 'boolean') {
